# heron

./: .gitignore  C:\SitesWeb\heron\your-template-static.html  IMPLEMENTATION_PROGRESS_EDI_IMPORT.md  OPTIMISATION_DEMARRAGE.md  README.md  dump.rdb  main.py  manage.py  pyproject.toml  requirements.txt
.claude/: progress_system.md  progress_system_code.yaml  progress_updates.md
apps/accountancy/: __init__.py  apps.py  loggers.py  models.py  notice_accountacy.md  views.py
apps/accountancy/essais/: essais_import_sage.py
apps/accountancy/forms/: __init__.py  forms_sage.py
apps/accountancy/imports/: ajout_cct.py  extraction_cct.py  extraction_code_plan.py  imports_sage.py
apps/accountancy/loops/: import_launch.sh  import_sage_data.py  imports_loop.py  manual_import.py
apps/accountancy/models/: __init__.py  pieces.py  sage.py  sage_axes_sections.py
apps/accountancy/validation/: djantic_sage.py
apps/accountancy/validations/: djantic_sage.py
apps/accountancy/views/: __init__.py  groupes_facturation_views.py
apps/articles/: filters.py  models.py  urls.py
apps/articles/data_fixtures/: articles_fixtures.py  familles_stat_fixtures.py
apps/articles/excel_outputs/: output_excel_articles_columns.py  output_excel_articles_list.py  output_excel_articles_news_list.py  output_excel_articles_without_account_list.py
apps/articles/forms/: __init__.py
apps/articles/imports/: articles_without_account.py
apps/articles/loops/: imports_articles.py
apps/articles/parameters/: querysets.py
apps/articles/sql/: accounts_validation.sql  articles_wihout_account_list.sql
apps/articles/views/: __init__.py  views_article_accounts.py  views_articles.py  views_articles_news.py  views_articles_news_etape_1_1.py  views_articles_with_no_account.py  views_articles_with_no_account_etape_1_2.py
apps/book/: __init__.py  apps.py  loggers.py  models.py  urls.py  views.py
apps/book/data_fixtures/: insert_fixtures.py  nature_fixtures.csv
apps/book/excel_outputs/: book_columns.py  book_excel_errors_emails.py  book_excel_societies_list.py  book_excel_statistiques_list.py  book_excel_supplier_cct.py  fiche_liste_societies.py
apps/book/forms/: __init__.py  forms_sage.py
apps/book/imports/: excel_generations.py  imports_sage.py
apps/book/loops/: imports_loop.py
apps/book/models/: __init__.py  base_sage_models.py  supplier_identifiers_models.py
apps/book/views/: __init__.py  book_views.py  identifiers_views.py  statistiques_edi_views.py
apps/business_centers/: apps.py
apps/centers_clients/: apps.py  models.py  urls.py  views.py
apps/centers_clients/data_fixtures/: famillies.csv  import_bi_access.csv  import_clients_from_bi_file.py  insert_fixtures.py
apps/centers_clients/excel_outputs/: centers_clients_columns.py  centers_clients_excel_maisons_list.py  excel_client_familly_list.py  excel_exclusions_tiers_clients_list.py  excel_exclusions_tiers_pays_clients_list.py  excel_maisons_excel_subscriptions.py
apps/centers_clients/forms/: __init__.py
apps/centers_clients/imports/: import_maisons_bi.py  import_subcriptions.py
apps/centers_clients/sql/: sql_import_subscription.sql
apps/centers_clients/views/: __init__.py  clients_familly_views.py  discards_views.py  maisons_subscriptions.py  (+3 more)
apps/centers_purchasing/: apps.py  models.py  urls.py
apps/clients_book/: apps.py
apps/clients_invoices/: apps.py  urls.py  views.py
apps/clients_validations/: apps.py
apps/compta/: apps.py  models.py  tasks.py  urls.py  views.py
apps/core/: DEMARRAGE_RAPIDE_SSE.md  GUIDE_INTEGRATION_SSE.md  README_NOTIFICATIONS.md  README_PROGRESS.md  README_SSE.md  TEMPLATES_PROGRESS.md  dropdown_models.md  exceptions.py  models.py  tests.py  urls.py  views.py
apps/countries/: models.py
apps/data_flux/: apps.py  cache.py  exceptions.py  loader.py  loaders.py  loggers.py  make_inserts.py  models.py  opto_33_parser.py  postgres_save.py  test_loaders.py  trace.py  urls.py  utilities.py  validation.py
apps/edi/: apps.py  exceptions.py  forms_base.py  loggers.py  models.py  notice_edi.md  read_me_edi.md  tasks.py  urls.py  validation_by_django_form.py  validation_by_pydantic.py  validation_by_serializers.py  views.py
apps/formations/: apps.py
apps/import_files/: apps.py  models.py
apps/invoices/: apps.py  filters.py  html.html  invoices_mod.py  models.py  tasks.py  urls.py
apps/od/: apps.py  models.py
apps/parameters/: models.py  urls.py  views.py
apps/periods/: models.py
apps/permissions/: apps.py
apps/permitions/: apps.py
apps/rfa/: apps.py  models.py  tasks.py  urls.py
apps/suppliers_book/: apps.py  models.py
apps/suppliers_invoices/: apps.py  models.py
apps/suppliers_validations/: apps.py
apps/traces/: apps.py  urls.py  views.py
apps/users/: Exceptions.py  backend.py  forms.py  models.py  urls.py  views.py
apps/validation_purchases/: __init__.py  apps.py  models.py  urls.py  views.py
apps/validation_sales/: apps.py  urls.py  views.py
apps/validations/: apps.py
backup_heron/: INSTALL.md  backup_restore_heron.sh  credentials.conf.example  cron_backup_heron.sh  heron_backup.cron
core/: Exceptions.py
core/functions/: excel_writer.py  functions_dates.py  functions_excel.py  functions_ftp.py  functions_http.py  functions_http_response.py  functions_mails.py  functions_postgresql.py  functions_setups.py  functions_sql.py  functions_utilitaires.py  loggers.py  mail_alertes.py  oracle_connect.py
core/imports/: import_files.py
core/logging/: logger_ogsp.py
core/snippets/: insert_adnims.py
heron/: __init__.py  asgi.py  celery.py  forms.py  loggers.py  models.py  processors.py  secure_files.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
heron/data_fixtures/: pays_fixtures.csv  periodes_fixtures.csv
heron/middleware/: login_middleware.py
heron/settings/: __init__.py  base.py  directories.py  local.py  production.py  suppliers.py
heron/snippets/: create_startapp.py  delete_migrations_dirs.py  essais.py  minify_js.py
heron/templatetags/: filters_tags.py
heron/utils/: directories.py
heron/views/: __init__.py  home_views.py  users_views.py
(+1183 files in other folders)
