[project]
name = "heron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "2to3==1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp>3.12.13",
    "aiopg==1.3.3",
    "aiosignal>1.2.0",
    "amqp==5.1.1",
    "ansicon==1.89.0",
    "anyio==3.5.0",
    "arrow==1.2.3",
    "asgiref==3.10.0",
    "astroid==2.11.2",
    "asttokens==2.0.5",
    "async-generator==1.10",
    "async-timeout==4.0.2",
    "atomicwrites==1.4.0",
    "attrs==21.4.0",
    "autobahn==22.3.1",
    "automat==20.2.0",
    "babel==2.9.1",
    "backcall==0.2.0",
    "beautifulsoup4==4.10.0",
    "billiard==3.6.4.0",
    "black==22.1.0",
    "blessed==1.19.1",
    "brotli>1.1.0",
    "cachetools==5.5.0",
    "celery==5.2.7",
    "certifi>2024.7.4",
    "cffi==1.15.1",
    "chardet==4.0.0",
    "charset-normalizer==2.0.12",
    "chartjs==1.2",
    "clamd==1.0.2",
    "click==8.0.4",
    "click-didyoumean==0.3.0",
    "click-plugins==1.1.1",
    "click-repl==0.2.0",
    "colorama==0.4.4",
    "constantly==15.1.0",
    "coverage==6.3.2",
    "crispy-forms-semantic-ui==0.2.0",
    "cryptography>=42.0.0",
    "cssselect2==0.7.0",
    "daphne==3.0.2",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "deprecated==1.2.13",
    "devtools==0.8.0",
    "diff-cover==10.0.0",
    "dill==0.3.4",
    "distlib>=0.3.7",
    "dj-database-url==0.5.0",
    "django==3.2.25",
    "django-axes==5.31.0",
    "django-braces==1.15.0",
    "django-celery==3.1.17",
    "django-celery-beat==2.2.1",
    "django-celery-results>=2.2.0",
    "django-chartjs==2.3.0",
    "django-ckeditor==6.2.0",
    "django-clamd==0.4.0",
    "django-cors-headers==3.11.0",
    "django-crispy-forms==1.14.0",
    "django-debug-toolbar==3.2.4",
    "django-dynamic-preferences==1.12.0",
    "django-extensions==3.1.5",
    "django-filter==23.2",
    "django-guardian==2.4.0",
    "django-ipware==4.0.2",
    "django-js-asset==2.0.0",
    "django-picklefield==3.1",
    "django-redis==5.2.0",
    "django-redis-cache==3.0.1",
    "django-rest-framework==0.1.0",
    "django-timezone-field==4.2.3",
    "djangorestframework==3.15.1",
    "djangorestframework-jwt==1.11.0",
    "djangorestframework-xml==2.0.0",
    "djantic==0.5.0",
    "dkimpy==1.1.8",
    "dnspython>=2.6.1",
    "email-validator==1.1.3",
    "et-xmlfile==1.1.0",
    "executing==0.8.3",
    "fastapi>=0.75.0",
    "filelock>=3.12.2",
    "flower>1.0.0",
    "fonttools>4.55.3",
    "frozenlist==1.8.0",
    "google-api-core==2.24.0",
    "google-api-python-client==2.156.0",
    "google-auth==2.37.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "googleapis-common-protos==1.66.0",
    "gripcontrol==4.2.1",
    "gunicorn>20.1.0",
    "h11>=0.13.0",
    "h2>=4.1.0",
    "hpack==4.0.0",
    "html2text==2020.1.16",
    "html5lib==1.1",
    "httplib2==0.22.0",
    "humanize==4.0.0",
    "hypercorn==0.13.2",
    "hyperframe==6.0.1",
    "hyperlink==21.0.0",
    "idna>3.3",
    "importlib-metadata==4.11.3",
    "incremental==24.11.0",
    "iniconfig==2.3.0",
    "isort==5.13.2",
    "itsdangerous==2.1.1",
    "jedi==0.18.1",
    "jinja2>3.0.3",
    "jinxed==1.2.0",
    "jsonschema==4.4.0",
    "kombu==5.2.4",
    "lazy-object-proxy==1.7.1",
    "lxml==5.3.0",
    "markdown==3.3.6",
    "markupsafe==2.1.1",
    "marshmallow==3.15.0",
    "matplotlib-inline==0.1.3",
    "mccabe==0.6.1",
    "memory-profiler==0.60.0",
    "multidict==6.7.0",
    "mypy-extensions==0.4.3",
    "numpy==1.26.4",
    "oauthlib>3.2.0",
    "odfpy==1.4.1",
    "openpyxl==3.0.10",
    "outcome==1.1.0",
    "packaging==24.2",
    "pandas==1.5.3",
    "parso==0.8.3",
    "pathspec==0.9.0",
    "pdfkit==1.0.0",
    "pdfrw==0.4",
    "pendulum==3.1.0",
    "persisting-theory==0.2.1",
    "pexpect==4.8.0",
    "pi==0.1.2",
    "pickleshare==0.7.5",
    "pillow>=10.0.1",
    "pip==25.3",
    "platformdirs>=3.9.1",
    "pluggy==1.0.0",
    "polars==1.35.1",
    "polars-runtime-32==1.35.1",
    "priority==2.0.0",
    "prometheus-client==0.13.1",
    "prompt-toolkit==3.0.28",
    "propcache==0.4.1",
    "proto-plus==1.25.0",
    "protobuf>5.29.2",
    "psutil==5.9.4",
    "psycopg2-binary==2.9.5",
    "ptyprocess==0.7.0",
    "pubcontrol==3.5.0",
    "pure-eval==0.2.2",
    "py>=1.11.0",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pycairo==1.27.0",
    "pycparser==2.21",
    "pydantic==1.9.0",
    "pydyf==0.11.0",
    "pyexcelerate==0.10.0",
    "pygments==2.19.2",
    "pygobject==3.50.0",
    "pyjwt==1.7.1",
    "pylint==2.13.1",
    "pylint-django==2.5.3",
    "pylint-plugin-utils==0.7",
    "pyopenssl==22.0.0",
    "pyparsing==3.0.7",
    "pyphen==0.17.0",
    "pyproject-toml==0.0.10",
    "pyrsistent==0.18.1",
    "pysocks==1.7.1",
    "pytest==7.2.2",
    "pytest-cov==3.0.0",
    "pytest-django==4.5.2",
    "python-calamine==0.3.1",
    "python-crontab==2.6.0",
    "python-dateutil==2.8.2",
    "python-decouple==3.6",
    "python-dotenv==0.19.2",
    "python-json-logger==2.0.2",
    "python-social-auth==0.3.6",
    "python3-openid==3.2.0",
    "pytz==2022.1",
    "pytzdata==2020.1",
    "pyyaml==6.0.3",
    "redis==3.5.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-oauthlib==1.3.1",
    "rsa==4.9",
    "ruff==0.9.5",
    "selenium>4.1.3",
    "service-identity==21.1.0",
    "setuptools==80.9.0",
    "six==1.16.0",
    "sniffio==1.2.0",
    "social-auth-core==4.0.2",
    "sortedcontainers==2.4.0",
    "soupsieve==2.3.1",
    "sqlalchemy==1.4.35",
    "sqlfluff==3.5.0",
    "sqlparse>0.5.0",
    "stack-data==0.2.0",
    "starlette>=0.25.0",
    "supervisor==4.2.4",
    "tablib==3.9.0",
    "tabulate==0.9.0",
    "tblib==3.2.2",
    "tinycss2==1.4.0",
    "tinyhtml5==2.0.0",
    "toml==0.10.2",
    "tomli==2.0.1",
    "tornado>6.1",
    "tox==3.24.5",
    "tqdm==4.67.1",
    "traitlets==5.1.1",
    "trio==0.20.0",
    "trio-websocket==0.9.2",
    "twisted>24.3.0",
    "txaio==22.2.1",
    "typing-extensions>=4.2.0",
    "tzdata==2022.1",
    "unipath==1.1",
    "uritemplate==4.1.1",
    "urllib3>1.26.20",
    "urllib3-secure-extra==0.1.0",
    "uvicorn==0.17.6",
    "vine==5.0.0",
    "virtualenv==20.35.4",
    "watch==0.2.7",
    "wcwidth==0.2.5",
    "weasyprint==64.0",
    "webencodings==0.5.1",
    "werkzeug>3.0.3",
    "wheel==0.45.1",
    "wrapt==1.14.1",
    "wsproto==1.1.0",
    "xlrd==2.0.1",
    "xlsxwriter==3.0.3",
    "xlutils==2.0.0",
    "xlwt==1.3.0",
    "xmltodict==0.12.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zope-interface==8.1.1",
    "zopfli==0.4.0",
]
